--- a/_working/package.json
+++ b/_working/package.json
@@ -13,6 +13,7 @@
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.6.2",
+    "react-icons": "^4.12.0",
     "react-router-dom": "^6.21.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
